--- a/assignment/Project 01/style1.css
+++ b/assignment/Project 01/style1.css
@@ -8,12 +8,11 @@ body {
 }
 
 header {
-    padding: 20px 0;
+    padding: 20px;
 }
 
 .nav {
     display: flex;
-    align-items: center;
     gap: 500px;
     margin-left: 150px;
 }
@@ -80,7 +79,7 @@ nav ul li {
 }
 
 .left p {
-    margin: 25px 0;
+    margin: 25px ;
     font-size: 16px;
     width: 85%;
 }
